k8s/helm/zitadel-helm.yaml
---
# Source: zitadel/templates/service_zitadel.yaml
apiVersion: v1
kind: Service
metadata:
  name: zitadel
  namespace: zitadel
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
  labels:
    helm.sh/chart: zitadel-10.3.0
    app.kubernetes.io/name: zitadel
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/version: "v4.19.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http2-server
      appProtocol: kubernetes.io/h2c
  selector:
    app.kubernetes.io/name: zitadel
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/component: start
---
# Source: zitadel/templates/deployment_zitadel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zitadel
  namespace: zitadel
  labels:
    helm.sh/chart: zitadel-10.3.0
    app.kubernetes.io/name: zitadel
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/version: "v4.19.2"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: start
spec:
  revisionHistoryLimit: 10
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zitadel
      app.kubernetes.io/instance: zitadel
      app.kubernetes.io/component: start
  template:
    metadata:
      annotations:
        checksum/configmap: 1de9f611b90afe9ace8c1eb8632275c9bb4fb0b8511b7044f78a83ab2bf66845
        checksum/secret-db-ssl-ca-crt: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/secret-zitadel-secrets: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        prometheus.io/scrape: "true"
        prometheus.io/path: "/debug/metrics"
        prometheus.io/port: "8080"
      labels:
        helm.sh/chart: zitadel-10.3.0
        app.kubernetes.io/name: zitadel
        app.kubernetes.io/instance: zitadel
        app.kubernetes.io/version: "v4.19.2"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: start
    spec:
      serviceAccountName: zitadel
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      enableServiceLinks: false
      containers:
        - name: "zitadel"
          securityContext:
              privileged: false
              readOnlyRootFilesystem: true
              runAsNonRoot: true
              runAsUser: 1000
          image: "ghcr.io/zitadel/zitadel:v4.19.2"
          imagePullPolicy: IfNotPresent
          args:
            - start
            - --config
            - /config/zitadel-config-yaml
            - --config
            - /zitadel-secret-config-yaml/config.yaml
            - --masterkeyFromEnv
          ports:
          - containerPort: 8080
            name: http2-server
            protocol: TCP
          livenessProbe:
            httpGet:
              path: /debug/healthz
              port: http2-server
              httpHeaders:
                - name: Host
                  value: auth.walnuts.dev
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /debug/ready
              port: http2-server
              httpHeaders:
                - name: Host
                  value: auth.walnuts.dev
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          startupProbe:
            httpGet:
              path: /debug/ready
              port: http2-server
              httpHeaders:
                - name: Host
                  value: auth.walnuts.dev
              scheme: HTTP
            periodSeconds: 1
            timeoutSeconds: 1
            failureThreshold: 30
          volumeMounts:
          - name: zitadel-config-yaml
            mountPath: /config
            readOnly: true
          - name: zitadel-secret-config-yaml
            mountPath: /zitadel-secret-config-yaml
            readOnly: true
          resources:
              limits:
                cpu: "1"
                memory: 1Gi
              requests:
                cpu: 30m
                memory: 350Mi
      volumes:
      - name: zitadel-config-yaml
        configMap:
          name: zitadel-config-yaml
      - name: zitadel-secret-config-yaml
        secret:
          secretName: zitadel
          defaultMode: 0440
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
            weight: 100
          - preference:
              matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - donut
            weight: 10
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/name: zitadel
          maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
---
# Source: zitadel/templates/hpa_login.yaml
#file: noinspection ExcessiveWhitespaceTrimInspection,KubernetesUnknownResourcesInspection
---
# Source: zitadel/templates/hpa_zitadel.yaml
#file: noinspection ExcessiveWhitespaceTrimInspection,KubernetesUnknownResourcesInspection
---
# Source: zitadel/templates/secret_self-signed.yaml
#file: noinspection HelmUnknownValues
---
# Source: zitadel/templates/servicemonitor_login.yaml
#file: noinspection KubernetesUnknownResourcesInspection
---
# Source: zitadel/templates/extra_manifests.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zitadel-egress
  namespace: 'zitadel'
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:cnpg.io/cluster: postgresql-default
        k8s:cnpg.io/instanceRole: primary
        k8s:io.kubernetes.pod.namespace: databases
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/component: opentelemetry-collector
        k8s:app.kubernetes.io/instance: opentelemetry-collector.default
        k8s:app.kubernetes.io/name: default-collector
        k8s:io.kubernetes.pod.namespace: opentelemetry-collector
    toPorts:
    - ports:
      - port: "4317"
        protocol: TCP
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/instance: zitadel
      k8s:app.kubernetes.io/name: zitadel
---
# Source: zitadel/templates/extra_manifests.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zitadel-ingress
  namespace: 'zitadel'
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/component: start
      k8s:app.kubernetes.io/instance: zitadel
      k8s:app.kubernetes.io/name: zitadel
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/component: proxy
        k8s:app.kubernetes.io/managed-by: envoy-gateway
        k8s:app.kubernetes.io/name: envoy
        k8s:io.kubernetes.pod.namespace: envoy-gateway-system
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/component: opentelemetry-collector
        k8s:app.kubernetes.io/instance: opentelemetry-collector.prometheus
        k8s:io.kubernetes.pod.namespace: opentelemetry-collector
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  - fromEntities:
    - host
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
---
# Source: zitadel/templates/extra_manifests.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zitadel-bootstrap-egress
  namespace: 'zitadel'
spec:
  egress:
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/component: setup
      k8s:app.kubernetes.io/instance: zitadel
      k8s:app.kubernetes.io/name: zitadel
---
# Source: zitadel/templates/grpcroute_zitadel.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: zitadel-grpc
  namespace: zitadel
  labels:
    helm.sh/chart: zitadel-10.3.0
    app.kubernetes.io/name: zitadel
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/version: "v4.19.2"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "auth.walnuts.dev"
  rules:
    - backendRefs:
        - name: zitadel
          port: 8080
---
# Source: zitadel/templates/httproute_zitadel.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zitadel
  namespace: zitadel
  labels:
    helm.sh/chart: zitadel-10.3.0
    app.kubernetes.io/name: zitadel
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/version: "v4.19.2"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "auth.walnuts.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: zitadel
          port: 8080
